# RightSock

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
RightSock/: CMakeLists.txt
RightSock/include/: RightSock.hpp
RightSock/include/Core/: SocketPayload.hpp  Types.hpp
RightSock/include/TCP/: ClientSocketTCP.hpp  ListeningSocketTCP.hpp  ServerSocketTCP.hpp
RightSock/include/UDP/: SocketUDP.hpp
RightSock/src/Core/Other/: Socket.cpp
RightSock/src/TCP/Other/: ListeningSocketTCP.cpp  SocketTCP.cpp
app-client/: CMakeLists.txt  main.cpp
app-server/: CMakeLists.txt  main.cpp
app-tcp-client/: CMakeLists.txt
app-tcp-server/: CMakeLists.txt  main.cpp
app-udp-client/: CMakeLists.txt
app-udp-server/: CMakeLists.txt
cmake/: options.cmake
examples/: CMakeLists.txt
examples/app-tcp-client/: CMakeLists.txt  main.cpp
examples/app-tcp-server/: CMakeLists.txt  main.cpp
examples/app-udp-client/: CMakeLists.txt  main.cpp
examples/app-udp-server/: CMakeLists.txt  main.cpp
examples/bigass-server/: CMakeLists.txt  main.cpp
right-sock/: CMakeLists.txt
right-sock/include/: RightSockContext.hpp
right-sock/include/Core/: IReceivable.hpp  ISendable.hpp  Socket.hpp  SocketPayload.hpp
right-sock/include/TCP/: ClientSocketTCP.hpp  ListeningSocketTCP.hpp  ServerSocketTCP.hpp  SocketTCP.hpp
right-sock/include/UDP/: SocketUDP.hpp
right-sock/src/: RightSock.cpp  RightSockContext.cpp
right-sock/src/Core/Other/: Socket.cpp
right-sock/src/Core/Windows/: Socket.cpp
right-sock/src/TCP/Other/: ClientSocketTCP.cpp  ListeningSocketTCP.cpp  SocketTCP.cpp
right-sock/src/TCP/Windows/: ClientSocketTCP.cpp  ListeningSocketTCP.cpp  ServerSocketTCP.cpp  SocketTCP.cpp
right-sock/src/UDP/Other/: SocketUDP.cpp
right-sock/src/UDP/Windows/: SocketUDP.cpp
socket-library/: CMakeLists.txt
socket-library/include/Core/: IReceivable.hpp  Socket.hpp  SocketPayload.hpp  Types.hpp
socket-library/include/TCP/: ClientSocketTCP.hpp  ServerSocketTCP.hpp
socket-library/src/: SocketContext.cpp  SocketContext.hpp
socket-library/src/Core/: ISendable.hpp  Socket.hpp
socket-library/src/Core/Windows/: Socket.cpp
socket-library/src/TCP/: ActiveSocketTCP.hpp  ClientSocketTCP.hpp  ListeningSocketTCP.hpp  ServerSocketTCP.hpp
socket-library/src/TCP/Other/: ActiveSocketTCP.cpp  ClientSocketTCP.cpp  ListeningSocketTCP.cpp
socket-library/src/TCP/Windows/: ActiveSocketTCP.cpp  ClientSocketTCP.cpp  ListeningSocketTCP.cpp  ServerSocketTCP.cpp  SocketTCP.cpp
socket-library/src/UDP/Windows/: SocketUDP.cpp
windows-client-app/: CMakeLists.txt  main.cpp
windows-server-app/: CMakeLists.txt  main.cpp
